--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,7 @@
     // 悬停以查看现有属性的描述。
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
-        
+    "configurations": [ 
         {
             "name": "(gdb) Launch",
             "type": "cppdbg",
@@ -17,9 +16,9 @@
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": true,
-            "preLaunchTask": "g++"　,
+            "preLaunchTask": "D:\\codeblocks\\MinGW\\bin\\g++.exe"　,
             "MIMode": "gdb",
-            "miDebuggerPath": "D:\\codeblocks\\MinGW\\bin\\gdb.exe",
+            "miDebuggerPath": "D:\\codeblocks\\MinGW\\bin\\g++.exe",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
@@ -29,5 +28,5 @@
             ]
         }
     ]
-
+}
  
